tests/arrows/arrows.exp
Error -------------------------------------------------- advanced_arrows.js:7:34

Error: advanced_arrows.js:7
  7: var bad = (x: number): string => x; // Error!
                                      ^ Cannot return `x` because number [1] is incompatible with string [2].
  References:
    7: var bad = (x: number): string => x; // Error!
                     ^^^^^^ [1]: number
    7: var bad = (x: number): string => x; // Error!
                              ^^^^^^ [2]: string

Error -------------------------------------------------- advanced_arrows.js:11:2

Error: advanced_arrows.js:11
 11: (ident("hi"): number); // Error
      ^^^^^^^^^^^ Cannot cast `ident(...)` to number because string [1] is incompatible with number [2].
  References:
   11: (ident("hi"): number); // Error
              ^^^^ [1]: string
   11: (ident("hi"): number); // Error
                     ^^^^^^ [2]: number

Error ----------------------------------------------------------- arrows.js:7:36

Error: arrows.js:7
  7:     images = images.sort((a, b) => (a.width - b.width) + "");
                                        ^^^^^^^^^^^^^^^^^^^^^^^^ Cannot call `images.sort` with function bound to `compareFn` because in the return value, string [1] is incompatible with number [2].
  References:
    7:     images = images.sort((a, b) => (a.width - b.width) + "");
                                          ^^^^^^^^^^^^^^^^^^^^^^^^ [1]: string
  269:     sort(compareFn?: (a: T, b: T) => number): Array<T>;
                                            ^^^^^^ [2]: number. See lib: <BUILTINS>/core.js:269


Found 3 errors
